app/assets/stylesheets/forest/partials/_media_item_chooser.scss
// Media Item Chooser

// .media-item-chooser__image,
// .media-item-chooser__button,
// .media-item-chooser__remove-image {
//   margin-bottom: $gutter;
// }

.image-input__body {
  .media-item--grid__icon {
    pointer-events: none;
  }

  audio {
    width: 100%;
  }
}

.media-item-chooser__image-wrapper {
  display: flex;

  .media-item--grid__icon {
    margin-top: 0.5em;
  }
}

.media-item-chooser__image-wrapper__inner {
  position: relative;
  display: inline-block;
}

.media-item-chooser__image {
  display: block;
  width: 100%;
  max-width: 100%;
  max-height: 250px;

  &[src=""] {
    display: none;
  }

  &:hover {
    filter: brightness(95%);
  }
}

.media-item-chooser__image--file {
  color: #aaa;
  font-size: 80px;
  width: 100px;
  height: 100px;
  background: #f7f7f7;
  display: flex;
  align-items: center;
  justify-content: center;

  &:before {
    background-size: 40px 40px;
    width: 100%;
    height: 100%;
  }
}

.media-item-chooser {
  .fileupload {
    margin-top: $gutter * 2;
  }
}

.image__btn-group--blank-image {
  .btn {
    border-top-right-radius: 0.25rem !important;
    border-bottom-right-radius: 0.25rem !important;
  }
}

.gallery {
  // margin-bottom: 0;

  .media-item-chooser__button {
    margin-bottom: 0;
  }

  .sortable-placeholder {
    float: left;
    // background-color: darken($well-bg, 10%);
    margin: 0 0 $gutter;
    padding: 0 ($gutter / 2);
    border-radius: 3px;

    &:before {
      content: '';
      display: block;
      height: 0;
      padding-bottom: 100%;
    }
  }
}

